Fix z-index of scrollbar

--- a/web/app/themes/fronation/resources/styles/layouts/_pages.scss
+++ b/web/app/themes/fronation/resources/styles/layouts/_pages.scss
@@ -243,3 +243,8 @@ body {
         }
     }
 }
+
+/** Scrollbar edits */
+.c-scrollbar {
+    z-index: 10;
+}
